@@ -36,26 +36,29 @@ namespace netlist {
     // constructors
     Expression() : NetComp(tExp) {}
     Expression(const shell::location& lloc) : NetComp(tExp, lloc) {}
-    Expression(const Number&);	/* a number is an expression */
-    Expression(const shell::location& lloc, const Number&);	/* a number is an expression */
-    Expression(const VIdentifier&); /* a variable/parameter is an expression */
-    Expression(const shell::location& lloc, const VIdentifier&); /* a variable/parameter is an expression */
-    Expression(const boost::shared_ptr<Concatenation>&); /* a concatenation is an expression */
-    Expression(const shell::location& lloc, const boost::shared_ptr<Concatenation>&); /* a concatenation is an expression */
-    Expression(const boost::shared_ptr<LConcatenation>&); /* some times need to convert a lvalue back to expression */
-    Expression(const shell::location& lloc, const boost::shared_ptr<LConcatenation>&); /* some times need to convert a lvalue back to expression */
+    Expression(const Number&);	// a number is an expression
+    Expression(const shell::location& lloc, const Number&);	// a number is an expression
+    Expression(const VIdentifier&); // a variable/parameter is an expression
+    Expression(const shell::location& lloc, const VIdentifier&); // a variable/parameter is an expression
+    Expression(const boost::shared_ptr<Concatenation>&); // a concatenation is an expression
+    Expression(const shell::location& lloc, const boost::shared_ptr<Concatenation>&); // a concatenation is an expression
+    Expression(const boost::shared_ptr<LConcatenation>&); // some times need to convert a lvalue back to expression
+    Expression(const shell::location& lloc, const boost::shared_ptr<LConcatenation>&); // some times need to convert a lvalue back to expression
     virtual ~Expression();
 
     // helpers
-    bool is_valuable() const;    /* check valuable */
-    Number get_value() const;    /* fetch the value if valuable */
-    void reduce();               /* try to reduce the equation */
+    bool is_valuable() const;    // check valuable
+    Number get_value() const;    // fetch the value if valuable
+    bool is_singular() const;    // the expression is a number, concatenation, variable or function call
+    Operation& get_op();             // get the private operation for read/write
+    const Operation& get_op() const; // read the private operation
+    void reduce();               // try to reduce the equation
     
     // develope the equation
     void append(Operation::operation_t);
     void append(Operation::operation_t, Expression&);
     void append(Operation::operation_t, Expression&, Expression&);
-    void concatenate(const Expression&); /* concatenate the number in two expressions */
+    void concatenate(const Expression&); // concatenate the number in two expressions
 
     // inherit from NetComp
     NETLIST_STREAMOUT_DECL;
