@@ -219,6 +219,12 @@ Number* netlist::Number::deep_copy() const {
   return (new Number(*this));
 }
 
+bool netlist::Number::elaborate(NetComp::elab_result_t &result, const NetComp::ctype_t mctype, const std::vector<NetComp *>& fp) {
+  // number is the simpliest form it could be, so directly return OK
+  result = NetComp::ELAB_Normal;
+  return true;
+}
+
 void netlist::Number::concatenate(const Number& rhs) {
   string ss = rhs.get_txt_value();
   string stuff;
